Let's see those beautful pics

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="background-image">
         <header>
             <div class="logo">
-                <img src="/assets/Base left icon .png" alt="Logo" /> <!-- Replace logo.png with your logo image -->
+                <img src="assets/Base left icon .png" alt="Logo" /> <!-- Replace logo.png with your logo image -->
             </div>
             <nav class="navbar">
                 <a href="#about">About</a>
@@ -21,7 +21,7 @@
             </nav>
         </header>
         <div class="content-container">
-            <div class="content-title"><img src="/assets/Main Log Full.png" /></div>
+            <div class="content-title"><img src="assets/Main Log Full.png" /></div>
             <div class="section-wrapper">
                 <button id="buy-button">Buy Catwifbong</button>
                 <div class="section-component">
@@ -43,7 +43,7 @@
                     <h1>Tokenomics</h1>
                     <div class="columns"> <!-- Flex container -->
                         <div class="column"> <!-- Each child is a flex item -->
-                            <img src="/assets/Pie Chart.png" alt="Pie Chart" />
+                            <img src="assets/Pie Chart.png" alt="Pie Chart" />
                         </div>
                         <div class="column">
                             <ul>
